--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -12,7 +12,7 @@ msgstr ""
 "Last-Translator: pixbox <pixbox@live.de>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
 "X-Generator: Poedit 1.8.5\n"
@@ -83,7 +83,7 @@ msgstr "N-NW"
 
 #: XionHDFYWeather.py:231
 msgid ", feels "
-msgstr ", gef√ºhlt "
+msgstr ", gef¸hlt "
 
 #: XionHDFYWeather.py:232
 msgid "N/A"
@@ -270,7 +270,7 @@ msgstr "Rauchig"
 #: XionHDFYWeather.py:472 XionHDFYWeather.py:576 XionHDFYWeather.py:680
 #: XionHDFYWeather.py:784 XionHDFYWeather.py:888
 msgid "Blustery"
-msgstr "St√ºrmisch"
+msgstr "St¸rmisch"
 
 #: XionHDFYWeather.py:474 XionHDFYWeather.py:578 XionHDFYWeather.py:682
 #: XionHDFYWeather.py:786 XionHDFYWeather.py:890
@@ -294,7 +294,7 @@ msgstr "Wolkig"
 msgid ""
 "Mostly\n"
 " cloudy"
-msgstr "√É¬úberwiegend bew√∂lkt"
+msgstr "‹berwiegend bewˆlkt"
 
 #: XionHDFYWeather.py:484 XionHDFYWeather.py:486 XionHDFYWeather.py:514
 #: XionHDFYWeather.py:588 XionHDFYWeather.py:590 XionHDFYWeather.py:618
@@ -304,7 +304,7 @@ msgstr "√É¬úberwiegend bew√∂lkt"
 msgid ""
 "Partly\n"
 " cloudy"
-msgstr "Teilweise bew√∂lkt"
+msgstr "Teilweise bewˆlkt"
 
 #: XionHDFYWeather.py:488 XionHDFYWeather.py:592 XionHDFYWeather.py:696
 #: XionHDFYWeather.py:800 XionHDFYWeather.py:904
@@ -399,7 +399,7 @@ msgstr "% Luftfeuchtigkeit"
 msgid ""
 "Not\n"
 " available"
-msgstr "Nicht verf√ºgbar"
+msgstr "Nicht verf¸gbar"
 
 #: plugin.py:75
 msgid "openHDF"
@@ -521,13 +521,13 @@ msgstr "dunkel Grau"
 #: plugin.py:262 plugin.py:293 plugin.py:324 plugin.py:356 plugin.py:387
 #: plugin.py:418 plugin.py:443
 msgid "green"
-msgstr "Gr√ºn"
+msgstr "Gr¸n"
 
 #: plugin.py:116 plugin.py:143 plugin.py:170 plugin.py:201 plugin.py:232
 #: plugin.py:263 plugin.py:294 plugin.py:325 plugin.py:357 plugin.py:388
 #: plugin.py:419
 msgid "green dark"
-msgstr "dunkel Gr√ºn"
+msgstr "dunkel Gr¸n"
 
 #: plugin.py:117 plugin.py:171 plugin.py:202 plugin.py:233 plugin.py:264
 #: plugin.py:295 plugin.py:326 plugin.py:358 plugin.py:389 plugin.py:420
@@ -602,7 +602,7 @@ msgstr "dunkel Violet"
 #: plugin.py:276 plugin.py:307 plugin.py:338 plugin.py:370 plugin.py:401
 #: plugin.py:432 plugin.py:449
 msgid "white"
-msgstr "Wei√ü¬ü"
+msgstr "Weiﬂ"
 
 #: plugin.py:339 plugin.py:471 plugin.py:492 plugin.py:512 plugin.py:525
 msgid "off"
@@ -650,11 +650,11 @@ msgstr "Kleines Cover"
 
 #: plugin.py:486
 msgid "big Cover"
-msgstr "Gro√ües Cover"
+msgstr "Groﬂes Cover"
 
 #: plugin.py:487
 msgid "very big Cover"
-msgstr "Sehr gro√ües Cover"
+msgstr "Sehr groﬂes Cover"
 
 #: plugin.py:491 plugin.py:526
 msgid "on"
@@ -669,7 +669,7 @@ msgstr "______________________ Wetter ___________________________________"
 
 #: plugin.py:513
 msgid "big"
-msgstr "Gro√ü"
+msgstr "Groﬂ"
 
 #: plugin.py:623
 msgid "small"
@@ -737,7 +737,7 @@ msgstr "Auswahlbalken Rahmen"
 
 #: plugin.py:610
 msgid "Progress-/Volumebar"
-msgstr "Fortschritts-/Lautst√§rkebalken"
+msgstr "Fortschritts-/Lautst‰rkebalken"
 
 #: plugin.py:611
 msgid "primary Font"
@@ -745,7 +745,7 @@ msgstr "Hauptschrift / Sendung Jetzt"
 
 #: plugin.py:612
 msgid "secondary Font"
-msgstr "Sekund√§re Schriftfarbe / Sendung Danach"
+msgstr "Sekund‰re Schriftfarbe / Sendung Danach"
 
 #: plugin.py:613
 msgid "Listselection Font"
@@ -813,13 +813,13 @@ msgid ""
 "Do you want to Restart the GUI now?"
 msgstr ""
 "Zum herunterladen der Dateien und schreiben des Skin,\n"
-"muss die Oberfl√§che neu gestartet werden.\n"
+"muss die Oberfl‰che neu gestartet werden.\n"
 "\n"
 "Wollen Sie jetzt neu starten?"
 
 #: plugin.py:955 plugin.py:957
 msgid "Configuration tool for XionHDF"
-msgstr "Konfigurationstool f√ºr XionHDF"
+msgstr "Konfigurationstool f¸r XionHDF"
 
 msgid "clock with weekday"
 msgstr "Uhr mit Wochentag"
