--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -823,3 +823,9 @@ msgstr "Konfigurationstool für XionHDF"
 
 msgid "clock with weekday"
 msgstr "Uhr mit Wochentag"
+
+msgid ""
+msgstr "Hier steht der Text zu Running-Text"
+
+msgid ""
+msgstr "Hier steht der Text zur Wetter ID"
