update language files

--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -824,5 +824,5 @@ msgstr "Konfigurationstool für XionHDF"
 msgid "clock with weekday"
 msgstr "Uhr mit Wochentag"
 
-msgid "Do you want to activate the running text for some parts of skin?"
-msgstr "Soll an einigen Stellen im Skin der laufende Text aktiviert werden?"
+msgid "This option activates the running text for some parts of skin."
+msgstr "Diese Option aktiviert den laufenende Text an einigen Stellen im Skin."
