2 new neon colors

--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -349,6 +349,12 @@ msgstr "Grün"
 msgid "green dark"
 msgstr "dunkel Grün"
 
+msgid "neon green"
+msgstr "Neongrün"
+
+msgid "neon yellow"
+msgstr "Neongelb"
+
 msgid "olive"
 msgstr "Olive"
 
