--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -442,8 +442,8 @@ msgstr "An"
 msgid "Weather"
 msgstr "Wetter"
 
-msgid "______________________ Weather __________________________________"
-msgstr "______________________ Wetter ___________________________________"
+msgid "_____________________________ Weather _________________________________"
+msgstr "_____________________________ Wetter __________________________________"
 
 msgid "big"
 msgstr "Groß"
@@ -454,8 +454,8 @@ msgstr "Schmal"
 msgid "small"
 msgstr "Klein"
 
-msgid "______________________ System __________________________________"
-msgstr "______________________ System __________________________________"
+msgid "_____________________________ System __________________________________"
+msgstr "_____________________________ System __________________________________"
 
 msgid "Image"
 msgstr "Image"
@@ -481,8 +481,8 @@ msgstr "Wetter ID"
 msgid "Second Infobar"
 msgstr "SecondInfobar Auswahl"
 
-msgid "______________________ Colors __________________________________"
-msgstr "______________________ Farben __________________________________"
+msgid "_____________________________ Colors __________________________________"
+msgstr "_____________________________ Farben __________________________________"
 
 msgid "Line"
 msgstr "Linie"
@@ -517,8 +517,8 @@ msgstr "Auswahlbalken Schriftfarbe"
 msgid "Button Text"
 msgstr "Button Text"
 
-msgid "______________________ Infobar __________________________________"
-msgstr "______________________ Infobar __________________________________"
+msgid "_____________________________ Styles __________________________________"
+msgstr "_____________________________ Styles __________________________________"
 
 msgid "Clock"
 msgstr "Uhr"
@@ -526,8 +526,8 @@ msgstr "Uhr"
 msgid "Clock Analog Color"
 msgstr "Farbe Analoguhr"
 
-msgid "______________________ General __________________________________"
-msgstr "______________________ General __________________________________"
+msgid "__________________________ General ___________________________________"
+msgstr "__________________________ General ___________________________________"
 
 msgid "ChannelSelection"
 msgstr "Kanallistenauswahl"
