infos instead weather selection

--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -439,6 +439,9 @@ msgstr "Sehr großes Cover"
 msgid "on"
 msgstr "An"
 
+msgid "infos in place of weather"
+msgstr "Info´s anstelle Wetter"
+
 msgid "Weather"
 msgstr "Wetter"
 
