--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -457,7 +457,7 @@ msgstr "Schmal"
 msgid "Small"
 msgstr "Klein"
 
-msgid "Infobar Channelname"
+msgid "Infobar channelname"
 msgstr "Infobar Sendername anzeigen"
 
 msgid "Image"
