--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 23:16+0200\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Koivo <koivo@hdfreaks.cc>\n"
+"Last-Translator: pixbox <pixbox@live.de>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -523,8 +523,8 @@ msgstr "Button Text"
 msgid "_____________________________ Styles __________________________________"
 msgstr "_____________________________ Styles __________________________________"
 
-msgid "Clock"
-msgstr "Uhr"
+msgid "Scrollbars"
+msgstr "Scrollbalken"
 
 msgid "Clock analog color"
 msgstr "Farbe Analoguhr"
@@ -575,6 +575,9 @@ msgstr "Aktualisierungsintervall (in Minuten)"
 
 msgid "This option activates the running text for some parts of skin."
 msgstr "Diese Option aktiviert den scrollenden Text an einigen Stellen im Skin."
+
+msgid "This option activates the scrollbars for some parts of skin."
+msgstr "Diese Option aktiviert den Scrollbalken an einigen Stellen im Skin."
 
 msgid "This option activates the channelname within the infobar."
 msgstr "Diese Option aktiviert die Anzeige vom Sendernamen in der Infobar."
