--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 23:16+0200\n"
 "PO-Revision-Date: \n"
-"Last-Translator: pixbox <pixbox@live.de>\n"
+"Last-Translator: Koivo <koivo@hdfreaks.cc>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -475,6 +475,9 @@ msgstr "Button Style"
 msgid "Running text"
 msgstr "Laufschrift - Running Text"
 
+msgid "Skinmode"
+msgstr "Skin Auflösung"
+
 msgid "Background transparency"
 msgstr "Hintergrund Transparenz"
 
@@ -572,6 +575,9 @@ msgstr "Uhr mit Wochentag"
 
 msgid "Refresh interval (in minutes)"
 msgstr "Aktualisierungsintervall (in Minuten)"
+
+msgid "This option set the resolution of skin."
+msgstr "Diese Option ändert die verwendete Auflösung des Skins."
 
 msgid "This option activates the running text for some parts of skin."
 msgstr "Diese Option aktiviert den scrollenden Text an einigen Stellen im Skin."
