--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 23:16+0200\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Koivo <koivo@hdfreaks.cc>\n"
+"Last-Translator: pixbox <pixbox@live.de>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -435,6 +435,9 @@ msgstr "Großes Cover"
 
 msgid "Very big cover"
 msgstr "Sehr großes Cover"
+
+msgid "List big cover"
+msgstr "Liste und großes Cover"
 
 msgid "On"
 msgstr "An"
